# CoqQ

./: .dockerignore  Dockerfile  Dockerfile.jupyter  GETTING_STARTED.md  Makefile  README.md  coq-mathcomp-quantum.opam  docker-compose.yml  nginx.conf  rocq-mathcomp-quantum.opam  start.sh
.devcontainer/: devcontainer.json
notebooks/: README.md  Rocq_Basics.ipynb
