opam-version: "2.0"
name: "rocq-mathcomp-quantum"
maintainer: "rocq-mathcomp-quantum@anonymous"
license: "CeCILL-B"
authors: ["Rocq Quantum Dev. Team"]
build: [ "dune" "build" "-p" name "-j" jobs ]
depends: [
  "rocq-prover"              { = "9.0.0"            }
  "rocq-stdlib"              { = "9.0.0"            }
  "rocq-core"                { = "9.0.0"            }
  "dune"                     {>= "3.2" & <= "3.16.0"}
  "dune-configurator"        {>= "3.13.0"           }
  # Note: MathComp packages may need updates for Rocq compatibility
  # Using latest compatible versions where available
  "coq-hierarchy-builder"    {>= "1.7.0"            }
  "coq-mathcomp-ssreflect"   {>= "2.2.0"            }
  "coq-mathcomp-algebra"     {>= "2.2.0"            }
  "coq-mathcomp-fingroup"    {>= "2.2.0"            }
  "coq-mathcomp-analysis"    {>= "1.3.1"            }
  "coq-mathcomp-real-closed" {>= "2.0.0"            }
  "coq-mathcomp-finmap"      {>= "2.1.0"            }
]
synopsis: "Quantum formalization using Rocq Prover 9.0"
homepage: "https://github.com/coq-quantum/CoqQ"
bug-reports: "https://github.com/coq-quantum/CoqQ/issues"
